--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v4
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag localbuild/testimage:latest
+        run: ls -l && docker build . --file Dockerfile --tag localbuild/testimage:latest
       - name: Run the Anchore Grype scan action
         uses: anchore/scan-action@d5aa5b6cb9414b0c7771438046ff5bcfa2854ed7
         id: scan
