--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
                 run: mvn --no-transfer-progress verify && ls -la 
 
     Anchore-Build-Scan:
-      needs: build
+      #needs: build
       permissions:
         contents: read # for actions/checkout to fetch code
         security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
